crates/glyph-cli/tests/corpus/valid/return_row3_named_with_type_no_decl.glyph
skill diagnose() -> Diagnosis
    description: "Diagnose an issue."
    flow:
        "Inspect the scope."
        return <diagnosis>
