crates/glyph-cli/tests/corpus/invalid/case-violation/block_pascal_case.glyph
block FooBar() -> Summary
    description: "Pascal-case block name is illegal."
    flow:
        return <"x">

skill demo()
    description: "Carrier."
    flow:
        return FooBar()
